# atoe

./: .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: build_msi.ps1
src/ai_doc_to_epub/: __init__.py  app.py  cli.py  config.py  epub_builder.py  llm_client.py  mineru_client.py  models.py  pipeline.py
tests/: test_epub_builder.py  test_pipeline_local_formatter.py
